# innovationcenter-mcp-zoo

./: .gitignore  AUDIT_REPORT.md  AUDIT_REPORT_v2.md  AUDIT_REPORT_v3.md  AUDIT_REPORT_v4.md  CONTRIBUTING.md  COVERAGE_AND_ERROR_MAPPING_SUMMARY.md  PROMPT_00_MASTER_INDEX.md  PROMPT_01_CLONE_PUBMED_FDA.md  PROMPT_02_CLINICAL_TRIALS_MCP.md  PROMPT_03_HOSPITAL_PRICING_MCP.md  PROMPT_04_CLAIMS_EDI_MCP.md  PROMPT_05_BIOTECH_MARKETS_MCP.md  PROMPT_06_REAL_ESTATE_EXTEND.md  PROMPT_07_NHANES_MCP.md  PROMPT_08_REGISTRY_UPDATE.md  PROMPT_09_PLAYWRIGHT_MCP.md  README.md  TEST_IMPLEMENTATION_SUMMARY.md  TYPESCRIPT_ALIGNMENT_SUMMARY.md  pyproject.toml  pytest.ini
common/: SECURITY.md  __init__.py  cache.py  circuit_breaker.py  config.py  dcap.py  errors.py  health.py  http.py  identifiers.py  logging.py  metrics.py  observability.py  phi.py  rate_limit.py  tracing.py  validation.py
docs/: ARCHITECTURE.md  CONFIGURATION_PATTERNS.md  DCAP_INTEGRATION.md  DOMAIN_BOUNDARIES.md  REGISTRY_FORMAT.md  REGISTRY_SUMMARY.md  SCHEMA_VALIDATION_IMPLEMENTATION.md  VALIDATION.md  observability-guide.md  observability.md  typescript_alignment.md
registry/: domains_taxonomy.json  tools_registry.json
schemas/: address.json  biotech_analyze_target_exposure.json  biotech_analyze_target_exposure_output.json  biotech_company_dossier.schema.json  biotech_get_company_profile.json  biotech_get_company_profile_output.json  biotech_get_funding_rounds.json  biotech_get_funding_rounds_output.json  biotech_get_investors.json  biotech_get_investors_output.json  biotech_get_pipeline_drugs.json  (+84 more)
(+220 files in other folders)
