[project]
name = "innovationcenter-mcp-zoo"
version = "0.1.0"
description = "Registry and collection of MCP servers and tools"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "jsonschema>=4.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

